front_end/ui/components/panel_feedback/panelFeedback.css
/*
 * Copyright 2021 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file.
 */

/**
 * Copyright 2021 Google LLC. All rights reserved.
 */

:host {
  display: block;
}

.preview {
  padding: 12px 16px;
  border: 1px solid var(--color-details-hairline);
  color: var(--color-text-primary);
  font-size: 13px;
  line-height: 20px;
  border-radius: 12px;
  margin: 42px 0;
  letter-spacing: 0.01em;
}

h2 {
  color: var(--color-primary);
  font-size: 13px;
  line-height: 20px;
  letter-spacing: 0.01em;
  margin: 9px 0 14px;
  display: flex;
  align-items: center;
  gap: 5px;
  font-weight: normal;
}

h3 {
  font-size: 13px;
  line-height: 20px;
  letter-spacing: 0.04em;
  color: var(--color-text-primary);
  margin-bottom: 2px;
  font-weight: normal;
}

.preview p {
  margin-bottom: 24px;
}

.thumbnail {
  height: 92px;
}

.video {
  display: flex;
  flex-flow: row wrap;
  gap: 20px;
}

x-link { /* stylelint-disable-line selector-type-no-unknown */
  color: var(--color-primary);
  text-decoration-line: underline;
}

x-link.quick-start-link { /* stylelint-disable-line selector-type-no-unknown */
  font-size: 14px;
  line-height: 22px;
  letter-spacing: 0.04em;
}

.video-description {
  min-width: min-content;
  flex-basis: min-content;
  flex-grow: 1;
}

